--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,171 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{couto2025analyzing,
+  title={Analyzing Gambling Addictions: A Spanish Corpus for Understanding Pathological Behavior},
+  author={Couto, Manuel and Fern{\'a}ndez-Pichel, Marcos and Arag{\'o}n, Mario Ezra and Losada, David E},
+  booktitle={Findings of the Association for Computational Linguistics: EMNLP 2025},
+  pages={17610--17619},
+  year={2025}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{carrera2025generating,
+  title={Generating Effective Health-Related Queries for Promoting Reliable Search Results},
+  author={Carrera, Xiana and Fern{\'a}ndez-Pichel, Marcos and Losada, David E},
+  booktitle={Proceedings of the 48th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={2627--2631},
+  year={2025},
+  pdf={Generacion_de_alternativas_de_queries_con_LLMs.pdf},
+  selected={true}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{elsweiler2025query,
+  title={Query Smarter, Trust Better? Exploring Search Behaviours for Verifying News Accuracy},
+  author={Elsweiler, David and Ateia, Samy and Bink, Markus and Donabauer, Gregor and Fern{\'a}ndez Pichel, Marcos and Frummet, Alexander and Kruschwitz, Udo and Losada, David E and Ludwig, Bernd and Meyer, Selina and others},
+  booktitle={Proceedings of the 48th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={515--526},
+  year={2025}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{perez2025depresym,
+  title={DepreSym: A Depression Symptom Annotated Corpus and the Role of Large Language Models as Assessors of Psychological Markers},
+  author={P{\'e}rez, Anxo and Fern{\'a}ndez-Pichel, Marcos and Parapar, Javier and Losada, David E},
+  journal={Language Resources and Evaluation},
+  pages={1--26},
+  year={2025},
+  publisher={Springer},
+  pdf={depresym.pdf},
+  selected={true}
+}
+
+@article{fernandez2025evaluating,
+  title={Evaluating search engines and large language models for answering health questions},
+  author={Fern{\'a}ndez-Pichel, Marcos and Pichel, Juan C and Losada, David E},
+  journal={npj Digital Medicine},
+  volume={8},
+  number={1},
+  pages={153},
+  year={2025},
+  publisher={Nature Publishing Group UK London},
   selected={true},
-  inspirehep_id = {3255}
+  pdf={npj.pdf}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{saborido2024chatgpt,
+  title={ChatGPT as a Solver and Grader of Programming Exams written in Spanish},
+  author={Saborido-Fern{\'a}ndez, Pablo and Fern{\'a}ndez-Pichel, Marcos and Losada, David E},
+  journal={arXiv preprint arXiv:2409.15112},
+  year={2024}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{rosenova2024semi,
+  title={Semi-Supervised Learning in the Field of Conversational Agents and Motivational Interviewing.},
+  author={Rosenova, Gergana and Fern{\'a}ndez-Pichel, Marcos and Meyer, Selina and Losada, David E},
+  journal={Procesamiento del Lenguaje Natural},
+  volume={73},
+  year={2024},
+  selected={true},
+  pdf={2024_pln_rosenova_semisupervised.pdf}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{fernandez2024large,
+  title={Large language models for binary health-related question answering: A zero-and few-shot evaluation},
+  author={Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Pichel, Juan C},
+  booktitle={International Conference on Computational Science},
+  pages={325--339},
+  year={2024},
+  organization={Springer}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{meyer2024exploring,
+  title={Exploring the Challenges of Behaviour Change Language Classification: A Study on Semi-Supervised Learning and the Impact of Pseudo-Labelled Data},
+  author={Meyer, Selina and Fern{\'a}ndez-Pichel, Marcos and Elsweiler, David and Losada, David E},
+  booktitle={Proceedings of the First Workshop on Patient-Oriented Language Processing (CL4Health)@ LREC-COLING 2024},
+  pages={229--239},
+  year={2024}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@inproceedings{fernandez2024depressmind,
+  title={Depressmind: A depression surveillance system for social media analysis},
+  author={Fern{\'a}ndez-Iglesias, Roque and Fern{\'a}ndez-Pichel, Marcos and Arag{\'o}n, Mario Ezra and Losada, David E},
+  booktitle={Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
+  pages={35--43},
+  year={2024}
+}
+
+@article{fernandez2024personality,
+  title={Personality trait analysis during the COVID-19 pandemic: a comparative study on social media},
+  author={Fern{\'a}ndez-Pichel, Marcos and Arag{\'o}n, Mario Ezra and Saborido-Pati{\~n}o, Juli{\'a}n and Losada, David E},
+  journal={Journal of Intelligent Information Systems},
+  volume={62},
+  number={1},
+  pages={117--142},
+  year={2024},
+  publisher={Springer},
+  selected={true},
+  pdf={personality.pdf}
+}
+
+@article{pascual2024web,
+  title={Web search or conversation with an artificial intelligence? Analysis of misinformation and relevance in the case of radon gas},
+  author={Pascual-Presa, Noel and Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Garc{\'\i}a-Orosa, Berta},
+  journal={Profesional de la informaci{\'o}n},
+  volume={33},
+  number={2}
+}
+
+@inproceedings{losada2024ludotrack,
+  title={LudoTrack: Web Mining, Search Technologies and Natural Language Processing for the Early Detection of Pathological Gambling.},
+  author={Losada, David E and Condori-Fern{\'a}ndez, Nelly and Fern{\'a}ndez-Pichel, Marcos},
+  booktitle={RCIS Workshops},
+  year={2024}
+}
+
+@article{fernandez2024unsupervised,
+  title={An unsupervised perplexity-based method for boilerplate removal},
+  author={Fern{\'a}ndez-Pichel, Marcos and Prada-Corral, Manuel and Losada, David E and Pichel, Juan C and Gamallo, Pablo},
+  journal={Natural Language Engineering},
+  volume={30},
+  number={1},
+  pages={132--149},
+  year={2024},
+  publisher={Cambridge University Press},
+  selected={true},
+  pdf={nle.pdf}
+}
+
+@article{fernandez2022multistage,
+  title={A multistage retrieval system for health-related misinformation detection},
+  author={Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Pichel, Juan C},
+  journal={Engineering Applications of Artificial Intelligence},
+  volume={115},
+  pages={105211},
+  year={2022},
+  publisher={Elsevier},
+  selected={true},
+  pdf={Multistage_Retrieval_System__revision_.pdf}
+}
+
+@inproceedings{meyer2022we,
+  title={Do we still need human assessors? prompt-based gpt-3 user simulation in conversational ai},
+  author={Meyer, Selina and Elsweiler, David and Ludwig, Bernd and Fernandez-Pichel, Marcos and Losada, David E},
+  booktitle={Proceedings of the 4th Conference on Conversational User Interfaces},
+  pages={1--6},
+  year={2022}
+}
+
+@inproceedings{fernandez2021comparing,
+  title={Comparing traditional and neural approaches for detecting health-related misinformation},
+  author={Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Pichel, Juan C and Elsweiler, David},
+  booktitle={International Conference of the Cross-Language Evaluation Forum for European Languages},
+  pages={78--90},
+  year={2021},
+  organization={Springer}
+}
+
+@inproceedings{fernandez2021reliability,
+  title={Reliability prediction for health-related content: a replicability study},
+  author={Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Pichel, Juan C and Elsweiler, David},
+  booktitle={European Conference on Information Retrieval},
+  pages={47--61},
+  year={2021},
+  organization={Springer}
 }
