--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,9 @@
   author={Couto, Manuel and Fern{\'a}ndez-Pichel, Marcos and Arag{\'o}n, Mario Ezra and Losada, David E},
   booktitle={Findings of the Association for Computational Linguistics: EMNLP 2025},
   pages={17610--17619},
-  year={2025}
+  bibtex_show={true},
+  year={2025},
+  abbr={EMNLP}
 }
 
 @inproceedings{carrera2025generating,
@@ -13,7 +15,9 @@
   pages={2627--2631},
   year={2025},
   pdf={Generacion_de_alternativas_de_queries_con_LLMs.pdf},
-  selected={true}
+  bibtex_show={true},
+  selected={true},
+  abbr={SIGIR}
 }
 
 @inproceedings{elsweiler2025query,
@@ -21,7 +25,9 @@
   author={Elsweiler, David and Ateia, Samy and Bink, Markus and Donabauer, Gregor and Fern{\'a}ndez Pichel, Marcos and Frummet, Alexander and Kruschwitz, Udo and Losada, David E and Ludwig, Bernd and Meyer, Selina and others},
   booktitle={Proceedings of the 48th International ACM SIGIR Conference on Research and Development in Information Retrieval},
   pages={515--526},
-  year={2025}
+  bibtex_show={true},
+  year={2025},
+  abbr={SIGIR}
 }
 
 @article{perez2025depresym,
@@ -32,7 +38,9 @@
   year={2025},
   publisher={Springer},
   pdf={depresym.pdf},
-  selected={true}
+  bibtex_show={true},
+  selected={true},
+  abbr={LRE}
 }
 
 @article{fernandez2025evaluating,
@@ -45,14 +53,18 @@
   year={2025},
   publisher={Nature Publishing Group UK London},
   selected={true},
-  pdf={npj.pdf}
+  bibtex_show={true},
+  pdf={npj.pdf},
+  abbr={NPJ}
 }
 
 @article{saborido2024chatgpt,
   title={ChatGPT as a Solver and Grader of Programming Exams written in Spanish},
   author={Saborido-Fern{\'a}ndez, Pablo and Fern{\'a}ndez-Pichel, Marcos and Losada, David E},
   journal={arXiv preprint arXiv:2409.15112},
-  year={2024}
+  bibtex_show={true},
+  year={2024},
+  abbr={arXiv}
 }
 
 
@@ -63,7 +75,9 @@
   volume={73},
   year={2024},
   selected={true},
-  pdf={2024_pln_rosenova_semisupervised.pdf}
+  bibtex_show={true},
+  pdf={2024_pln_rosenova_semisupervised.pdf},
+  abbr={SEPLN}
 }
 
 @inproceedings{fernandez2024large,
@@ -72,7 +86,9 @@
   booktitle={International Conference on Computational Science},
   pages={325--339},
   year={2024},
-  organization={Springer}
+  bibtex_show={true},
+  organization={Springer},
+  abbr={ICCS}
 }
 
 @inproceedings{meyer2024exploring,
@@ -80,7 +96,9 @@
   author={Meyer, Selina and Fern{\'a}ndez-Pichel, Marcos and Elsweiler, David and Losada, David E},
   booktitle={Proceedings of the First Workshop on Patient-Oriented Language Processing (CL4Health)@ LREC-COLING 2024},
   pages={229--239},
-  year={2024}
+  bibtex_show={true},
+  year={2024},
+  abbr={CL4Health}
 }
 
 @inproceedings{fernandez2024depressmind,
@@ -88,7 +106,9 @@
   author={Fern{\'a}ndez-Iglesias, Roque and Fern{\'a}ndez-Pichel, Marcos and Arag{\'o}n, Mario Ezra and Losada, David E},
   booktitle={Proceedings of the 18th Conference of the European Chapter of the Association for Computational Linguistics: System Demonstrations},
   pages={35--43},
-  year={2024}
+  bibtex_show={true},
+  year={2024},
+  abbr={EACL}
 }
 
 @article{fernandez2024personality,
@@ -101,7 +121,9 @@
   year={2024},
   publisher={Springer},
   selected={true},
-  pdf={personality.pdf}
+  bibtex_show={true},
+  pdf={personality.pdf},
+  abbr={JIIS}
 }
 
 @article{pascual2024web,
@@ -109,14 +131,18 @@
   author={Pascual-Presa, Noel and Fern{\'a}ndez-Pichel, Marcos and Losada, David E and Garc{\'\i}a-Orosa, Berta},
   journal={Profesional de la informaci{\'o}n},
   volume={33},
-  number={2}
+  bibtex_show={true},
+  number={2},
+  abbr={EPI}
 }
 
 @inproceedings{losada2024ludotrack,
   title={LudoTrack: Web Mining, Search Technologies and Natural Language Processing for the Early Detection of Pathological Gambling.},
   author={Losada, David E and Condori-Fern{\'a}ndez, Nelly and Fern{\'a}ndez-Pichel, Marcos},
   booktitle={RCIS Workshops},
-  year={2024}
+  bibtex_show={true},
+  year={2024},
+  abbr={RCIS}
 }
 
 @article{fernandez2024unsupervised,
@@ -129,7 +155,9 @@
   year={2024},
   publisher={Cambridge University Press},
   selected={true},
-  pdf={nle.pdf}
+  bibtex_show={true},
+  pdf={nle.pdf},
+  abbr={NLE}
 }
 
 @article{fernandez2022multistage,
@@ -141,7 +169,9 @@
   year={2022},
   publisher={Elsevier},
   selected={true},
-  pdf={Multistage_Retrieval_System__revision_.pdf}
+  bibtex_show={true},
+  pdf={Multistage_Retrieval_System__revision_.pdf},
+  abbr={EAAI}
 }
 
 @inproceedings{meyer2022we,
@@ -149,7 +179,9 @@
   author={Meyer, Selina and Elsweiler, David and Ludwig, Bernd and Fernandez-Pichel, Marcos and Losada, David E},
   booktitle={Proceedings of the 4th Conference on Conversational User Interfaces},
   pages={1--6},
-  year={2022}
+  year={2022},
+  bibtex_show={true},
+  abbr={CUI}
 }
 
 @inproceedings{fernandez2021comparing,
@@ -158,7 +190,9 @@
   booktitle={International Conference of the Cross-Language Evaluation Forum for European Languages},
   pages={78--90},
   year={2021},
-  organization={Springer}
+  bibtex_show={true},
+  organization={Springer},
+  abbr={CLEF}
 }
 
 @inproceedings{fernandez2021reliability,
@@ -167,5 +201,7 @@
   booktitle={European Conference on Information Retrieval},
   pages={47--61},
   year={2021},
-  organization={Springer}
+  bibtex_show={true},
+  organization={Springer},
+  abbr={ECIR}
 }
